--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="red">#CC0000</color>
     <color name="indigo">#536DFE</color>
+    <color name="green">#008000</color>
     <color name="grey">#D3D3D3	</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
