UI | Functionality update
-Coded an scalable LocalStorageHelper based on Json and shared preferences
-Now it's possible to see a movie detail
-Now it's possible to see the full movie poster from movie detail
-Now it's possible to add to favorites/non favorites from movie detail
-Now the movie cards show an icon representing if they are in favorites or non favorites
-Now the movie cards show the movie release date
-Now the "No image available" url is set in a constant in AppEnvHelper
-Now the app displays an "Empty Screen" if there's no data to be shown
-Added various strings to the xml file
-Added DateTimeUtils library
-Added AndroidImagePopup library
-Various bug fixes

-Proper readme tbd
-Proper changelog tbd (no release ready yet)

--- a/app/src/main/res/layout/fragment_disliked.xml
+++ b/app/src/main/res/layout/fragment_disliked.xml
@@ -7,7 +7,11 @@
     android:paddingStart="20dp"
     android:paddingEnd="20dp"
     tools:context=".fragments.PopularFragment">
-
+    <include
+        layout="@layout/empty_non_favorites"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        />
     <TextView
         android:id="@+id/title_popular"
         android:layout_width="match_parent"
