UI | Functionality update
-Added support for multi language
-Improved local storage in reaction of multilanguage support
-Added dark theme
-Now the favorites an non favorites views are sorted by name and by added date
-Added README.md
-Added MIT License

--- a/app/src/main/res/layout/fragment_disliked.xml
+++ b/app/src/main/res/layout/fragment_disliked.xml
@@ -4,8 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingStart="20dp"
-    android:paddingEnd="20dp"
+    android:paddingStart="@dimen/activity_horizontal_margin"
+    android:paddingEnd="@dimen/activity_horizontal_margin"
     tools:context=".fragments.PopularFragment">
     <include
         layout="@layout/empty_non_favorites"
