--- a/app/src/main/res/layout-w600dp/activity_movie_detail.xml
+++ b/app/src/main/res/layout-w600dp/activity_movie_detail.xml
@@ -80,8 +80,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingStart="20dp"
-            android:paddingEnd="20dp">
+            android:paddingStart="@dimen/activity_horizontal_margin"
+            android:paddingEnd="@dimen/activity_horizontal_margin">
 
             <TextView
                 android:id="@+id/movie_detail_title"
@@ -91,7 +91,6 @@
                 android:ellipsize="end"
                 android:maxLines="2"
                 android:scrollHorizontally="true"
-                android:textColor="@color/black"
                 android:textSize="45sp"
                 android:textStyle="bold" />
 
