--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,16 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+    <Button
+        android:id="@+id/localeButton"
+        android:layout_width="40dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin"
+        app:layout_constraintRight_toRightOf="parent"
+        style="?attr/buttonBarButtonStyle"
+        android:drawableEnd="@drawable/ic_baseline_language_24"
+        />
     <FrameLayout
         android:id="@+id/main_container"
         android:layout_width="match_parent"
