--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -81,8 +81,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp">
+            android:paddingStart="@dimen/activity_horizontal_margin"
+            android:paddingEnd="@dimen/activity_horizontal_margin">
 
             <TextView
                 android:id="@+id/movie_detail_title"
@@ -92,7 +92,6 @@
                 android:ellipsize="end"
                 android:maxLines="2"
                 android:scrollHorizontally="true"
-                android:textColor="@color/black"
                 android:textSize="30sp"
                 android:textStyle="bold" />
 
